# exwise

./: README.TXT  configure.in
src/: CRC32.PAS  E_WI_DEF.PAS  E_WI_SPR.PAS  INFLATE.PAS  Makefile.am  consts.h  ewise.c  exwise.c  fileio.c
